--- a/build.gradle
+++ b/build.gradle
@@ -41,12 +41,14 @@ ext {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
 
     compile("mysql:mysql-connector-java:6.0.6")
     compile("org.projectlombok:lombok:1.16.20")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile('org.springframework.security:spring-security-test')
     testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
     testCompile("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
     testCompile("org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}")
