--- a/build.gradle
+++ b/build.gradle
@@ -37,15 +37,23 @@ targetCompatibility = 1.8
 ext {
     junitJupiterVersion = "5.1.0"
     junitPlatformVersion = "1.1.0"
+    jjwtVersion = "0.9.0"
+    mybatisVersion = "1.3.2"
+    mysqlConnectorVersion = "6.0.6"
+    lombokVersion = "1.16.20"
+    springExtensionVersion = "1.0.3"
+    springMybatisTestVersion = "1.3.2"
+    springMockMvCVersion = "2.9.0"
 }
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-security")
-    compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
+    compile("io.jsonwebtoken:jjwt:${jjwtVersion}")
+    compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatisVersion}")
 
-    compile("mysql:mysql-connector-java:6.0.6")
-    compile("org.projectlombok:lombok:1.16.20")
+    compile("mysql:mysql-connector-java:${mysqlConnectorVersion}")
+    compile("org.projectlombok:lombok:${lombokVersion}")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile('org.springframework.security:spring-security-test')
@@ -54,9 +62,9 @@ dependencies {
     testCompile("org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}")
     testCompile("org.junit.platform:junit-platform-launcher:${junitPlatformVersion}")
     testCompile("org.junit.platform:junit-platform-runner:${junitPlatformVersion}")
-    testCompile("com.jayway.restassured:spring-mock-mvc:2.9.0")
-    testCompile("com.github.sbrannen:spring-test-junit5:1.0.3")
-    testCompile("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:1.3.2")
+    testCompile("com.jayway.restassured:spring-mock-mvc:${springMockMvCVersion}")
+    testCompile("com.github.sbrannen:spring-test-junit5:${springExtensionVersion}")
+    testCompile("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:${springMybatisTestVersion}")
 }
 
 
