aikin: replace mybatis with spring data jpa

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -5,11 +5,21 @@ spring:
   profiles:
     active: test
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/bicyclestore_user_test
+    url: jdbc:h2:mem:bicyclestore_user_test;MODE=MYSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;INIT=CREATE SCHEMA IF NOT EXISTS bicyclestore_user_test\;SET SCHEMA bicyclestore_user_test
     username: root
     password:
     name: bicyclestore_user_test
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: org.h2.Driver
+    platform: h2
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+  h2:
+    console:
+      enabled: true
+      path: /h2
+
 
 security:
   jwt:
