--- a/build.gradle
+++ b/build.gradle
@@ -38,19 +38,17 @@ ext {
     junitJupiterVersion = "5.1.0"
     junitPlatformVersion = "1.1.0"
     jjwtVersion = "0.9.0"
-    mybatisVersion = "1.3.2"
     mysqlConnectorVersion = "6.0.6"
     lombokVersion = "1.16.20"
     springExtensionVersion = "1.0.3"
-    springMybatisTestVersion = "1.3.2"
     springMockMvCVersion = "2.9.0"
 }
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-security")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("io.jsonwebtoken:jjwt:${jjwtVersion}")
-    compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatisVersion}")
 
     compile("mysql:mysql-connector-java:${mysqlConnectorVersion}")
     compile("org.projectlombok:lombok:${lombokVersion}")
@@ -64,7 +62,7 @@ dependencies {
     testCompile("org.junit.platform:junit-platform-runner:${junitPlatformVersion}")
     testCompile("com.jayway.restassured:spring-mock-mvc:${springMockMvCVersion}")
     testCompile("com.github.sbrannen:spring-test-junit5:${springExtensionVersion}")
-    testCompile("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:${springMybatisTestVersion}")
+    testCompile("com.h2database:h2:1.4.192")
 }
 
 
