aikin: refactor should use token jwt user

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,3 +12,5 @@ security:
   jwt:
     secret: ${JWT_SECRET:_SEMS_JWT_SECRET_201805260909999}
     expiration-in-seconds: 600000
+    token-prefix: Bearer
+    toke-key: Authorization
