--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -7,3 +7,11 @@ spring:
     password:
     name: bicyclestore_user_prod
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+
+security:
+  jwt:
+    secret: ${JWT_SECRET:_SEMS_JWT_SECRET_201805260909999}
+    expiration-in-seconds: 600000
+    token-prefix: Bearer
+    toke-key: Authorization
