--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 apply plugin: "java"
 apply plugin: "idea"
+apply plugin: "application"
 apply plugin: "org.junit.platform.gradle.plugin"
 apply plugin: "org.springframework.boot"
 
@@ -83,3 +84,7 @@ processResources {
 build.dependsOn processResources
 bootRun.dependsOn flywayMigrate
 bootRun.systemProperty "spring.profiles.active", env
+
+applicationDefaultJvmArgs = [
+    "-Xdebug -Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=n"
+]
