--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import org.apache.tools.ant.filters.ReplaceTokens
-
 buildscript {
     repositories {
         mavenCentral()
@@ -8,8 +6,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath "org.junit.platform:junit-platform-gradle-plugin:1.1.0"
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.5.10.RELEASE"
+        classpath "org.junit.platform:junit-platform-gradle-plugin:1.2.0"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.0.4.RELEASE"
         classpath "gradle.plugin.com.boxfuse.client:gradle-plugin-publishing:5.0.7"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.2"
     }
@@ -17,7 +15,6 @@ buildscript {
 
 repositories {
     mavenCentral()
-    maven { url "https://jitpack.io" }
 }
 
 apply plugin: "java"
@@ -25,6 +22,7 @@ apply plugin: "idea"
 apply plugin: "application"
 apply plugin: "org.junit.platform.gradle.plugin"
 apply plugin: "org.springframework.boot"
+apply plugin: "io.spring.dependency-management"
 
 apply {
     from("tasks/flyway.gradle")
@@ -37,16 +35,18 @@ apply {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+mainClassName = 'me.aikin.bicyclestore.user.BicyclestoreUserServiceApplication'
+
 configurations {
     providedRuntime
 }
 
 ext {
-    junitJupiterVersion = "5.1.0"
-    junitPlatformVersion = "1.1.0"
+    junitJupiterVersion = "5.2.0"
+    junitPlatformVersion = "1.2.0"
     jjwtVersion = "0.9.0"
     mysqlConnectorVersion = "6.0.6"
-    lombokVersion = "1.16.20"
+    lombokVersion = "1.18.2"
     springExtensionVersion = "1.0.3"
     springMockMvCVersion = "2.9.0"
     logstashVersion = "4.9"
@@ -71,7 +71,6 @@ dependencies {
     testCompile("org.junit.platform:junit-platform-launcher:${junitPlatformVersion}")
     testCompile("org.junit.platform:junit-platform-runner:${junitPlatformVersion}")
     testCompile("com.jayway.restassured:spring-mock-mvc:${springMockMvCVersion}")
-    testCompile("com.github.sbrannen:spring-test-junit5:${springExtensionVersion}")
     testCompile("com.h2database:h2:1.4.192")
 }
 
@@ -79,20 +78,20 @@ dependencies {
 
 def env = project.hasProperty("env") ? env : "dev"
 
-processResources {
-    println("active profile: ${env}")
-
-    include "application.yml"
-    include "application-${env}.yml"
-    include "db/migration/**"
-    include "logback.xml"
-    filesMatching("**/application.yml") {
-        filter(ReplaceTokens, tokens: [
-            'PROFILE_PLACE_HOLDER': "${env}".toString(),
-        ])
-    }
-}
-build.dependsOn processResources
+//processResources {
+//    println("active profile: ${env}")
+//
+//    include "application.yml"
+//    include "application-${env}.yml"
+//    include "db/migration/**"
+//    include "logback.xml"
+//    filesMatching("**/application.yml") {
+//        filter(ReplaceTokens, tokens: [
+//            'PROFILE_PLACE_HOLDER': "${env}".toString(),
+//        ])
+//    }
+//}
+//build.dependsOn processResources
 bootRun.dependsOn flywayMigrate
 bootRun.systemProperty "spring.profiles.active", env
 
