--- a/build.gradle
+++ b/build.gradle
@@ -42,20 +42,22 @@ configurations {
 }
 
 ext {
-    junitJupiterVersion = "5.2.0"
-    junitPlatformVersion = "1.2.0"
     jjwtVersion = "0.9.0"
     mysqlConnectorVersion = "6.0.6"
     lombokVersion = "1.18.2"
-    springExtensionVersion = "1.0.3"
+    eurekaClientVersion = "2.0.1.RELEASE"
+    junitJupiterVersion = "5.2.0"
+    junitPlatformVersion = "1.2.0"
     springMockMvCVersion = "2.9.0"
     logstashVersion = "4.9"
 }
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:${eurekaClientVersion}")
     compile("io.jsonwebtoken:jjwt:${jjwtVersion}")
 
     compile("mysql:mysql-connector-java:${mysqlConnectorVersion}")
@@ -73,7 +75,6 @@ dependencies {
     testCompile("com.jayway.restassured:spring-mock-mvc:${springMockMvCVersion}")
     testCompile("com.h2database:h2:1.4.192")
 }
-
 
 
 def env = project.hasProperty("env") ? env : "dev"
