feat(CONFIG): setup git hooks

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ apply {
     from("tasks/test-coverage.gradle")
     from("tasks/checkstyle.gradle")
     from("tasks/sonarqube.gradle")
+    from("tasks/git-hooks.gradle")
 }
 
 
